--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
         shell: bash
         run: |
           mkdir -p build && cd build 
-          cmake .. -DZENOHC_TREAT_WARNING_AS_ERROR=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=~/local -DZENOHC_BUILD_WITH_SHARED_MEMORY=${{ matrix.shm }} -DZENOHC_BUILD_WITH_UNSTABLE_API=${{ matrix.unstable }}
-          cmake --build . --target install --config Release
+          cmake .. -DZENOHC_TREAT_WARNING_AS_ERROR=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=~/local -DZENOHC_BUILD_WITH_SHARED_MEMORY=${{ matrix.shm }} -DZENOHC_BUILD_WITH_UNSTABLE_API=${{ matrix.unstable }}
+          cmake --build . --target install --config Debug
 
       - name: Install valgrind
         uses: taiki-e/install-action@valgrind
@@ -86,9 +86,9 @@ jobs:
         shell: bash
         run: |
           cd build
-          cmake .. -DZENOHC_TREAT_WARNING_AS_ERROR=ON -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DZENOHC_BUILD_WITH_SHARED_MEMORY=${{ matrix.shm }} -DZENOHC_BUILD_WITH_UNSTABLE_API=${{ matrix.unstable }}
-          cmake --build . --target tests --config Release
-          ctest -C Release --output-on-failure -E "(unit_z_api_alignment_test|build_z_build_static)"
+          cmake .. -DZENOHC_TREAT_WARNING_AS_ERROR=ON -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Debug -DZENOHC_BUILD_WITH_SHARED_MEMORY=${{ matrix.shm }} -DZENOHC_BUILD_WITH_UNSTABLE_API=${{ matrix.unstable }}
+          cmake --build . --target tests --config Debug
+          ctest -C Debug --output-on-failure -E "(unit_z_api_alignment_test|build_z_build_static)"
 
       - name: Build cmake tests with C++ compiler to make sure that C API is C++ compatible
         shell: bash
